<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pushapps Demo</string>
    <string name="action_settings">Send Event!</string>
    <string name="hello_world">Hello world!</string>
    <string name="register">Register</string>
    <string name="unregister">Unregister</string>
	<string name="message">Message</string>
	<string name="title">Title</string>
	<string name="link">Link</string>
	<string name="custom_json">Custom Json</string>
	<string name="sound">Sound</string>
	<string name="send_event">Send Event</string>
	<string name="clear">Clear Message</string>
</resources>