<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6E2BE"
    android:padding="12dp" >

    <TableLayout
        android:id="@+id/message_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:maxEms="10"
                android:textSize="18sp" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:maxEms="10"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_json"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/json"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:maxEms="10"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sound"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:maxEms="10"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/message_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16sp"
        android:text="@string/clear"
        android:textStyle="bold" />

    <View
        android:id="@+id/center"
        android:layout_width="0dip"
        android:layout_height="0dip"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/unregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@id/center"
        android:gravity="center"
        android:text="@string/unregister"
        android:textStyle="bold" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="8dp"
        android:layout_toLeftOf="@id/center"
        android:gravity="center"
        android:text="@string/register"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/send_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="4dp"
        android:layout_toLeftOf="@+id/send"
        android:maxEms="14"
        android:maxLines="1"
        android:minEms="6"
        android:singleLine="true" />

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:text="@string/send_event"
        android:textStyle="bold" />

</RelativeLayout>